--- a/styles/cat_styles.css
+++ b/styles/cat_styles.css
@@ -59,9 +59,9 @@ a:hover{
     font-size: larger;
     padding: 10px 10px 20px 40px;
 }
-.footer:hover{
+.footer:hover, .header:hover{
     font-size: 200%;
-    text-shadow: 3px 3px 1px beige;
+    text-shadow: 3px 3px 1px blue;
     padding-top: 100px;
     padding-bottom: 100px;
 }
