--- a/styles/cat_styles.css
+++ b/styles/cat_styles.css
@@ -47,11 +47,32 @@ li:hover{
 .credits{
     color:plum;
     font-size: 75%;
+    padding-bottom: 50px;
 }
 
 a:hover{
     color:chartreuse;
     font-size: larger;
+}
+
+button{
+    background-color: white;
+    color:black;
+    border: 2px solid lightcoral;
+    border-radius: 15px;
+    box-shadow: 0 10px #999;
+    transition-duration: 0.3s;
+    padding: 40px 40px 40px 40px;
+}
+button:hover{
+    background-color: lightcoral;
+    color: white;
+    font-size: large;
+}
+button:active{
+    background-color: darksalmon;
+    box-shadow: 0 5px #666;
+    transform: translateY(5px);
 }
 
 .footer{
