--- a/styles/cat_styles.css
+++ b/styles/cat_styles.css
@@ -94,3 +94,16 @@ button:active{
     padding-bottom: 100px;
     transition-duration: 0.4s;
 }
+
+.footnote{
+    text-align: right;
+    font-size: medium;
+    padding: 10px 10px 20px 40px;
+}
+.footnote:hover{
+    font-size: 100%;
+    text-shadow: 3px 3px 1px blue;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    transition-duration: 0.4s;
+}
