add full repo path

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,7 +6,7 @@ html{
 
 body{
     background-color: aliceblue;
-    background-image: url("images/cats/universe_bg.jpg");
+    background-image: url("DevSchool-HTML/../../images/cats/universe_bg.jpg");
 }
 
 p{
