--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,23 +1,36 @@
+
 body{
     background-color: bisque;
 }
 
-.container{
+h1{
+    padding: 20px 20px 20px 20px;
+}
+
+.grid-container{
     background-color: rgba(127, 255, 212, 0.5);
-    padding: 10px 100px 10px 100px;
-    display: flex;
-    flex-direction: row;
+    padding: 10px 10px 10px 10px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 20px;
 }
 
-.image-section{
-    padding: 20px 0px 10px 20px;
-    width: 40%;
+.media-column{
+    padding: 20px 0px 10px 75px;
+    width: 50%;
 }
 
-.text-section{
+video{
+    width: 600px;
+    height: 700px;
+    object-fit: cover;
+}
+
+.text-column{
     padding: 40px 20px 10px 0px;
-    width: 40%;
+    width: 50%;
     font-size: 120%;
+    grid-row: 1 / span 1;
 }
 
 a:hover {
