--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,21 +3,33 @@ body{
     background-color: bisque;
 }
 
-h1{
+h1, h2{
     padding: 20px 20px 20px 20px;
 }
+
+.navigation-menu{
+    background-color: rgba(127, 255, 212, 0.5);
+    padding: 10px 10px 10px 10px;
+}
+
 
 .grid-container{
     background-color: rgba(127, 255, 212, 0.5);
     padding: 10px 10px 10px 10px;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: repeat(2, 1fr);
     grid-gap: 20px;
+}
+
+/* Media query for small screens */
+@media (max-width: 768px) {
+    .grid-container{
+        grid-auto-flow: dense; 
+    }    
 }
 
 .media-column{
     padding: 20px 0px 10px 75px;
-    width: 50%;
 }
 
 video{
@@ -28,9 +40,8 @@ video{
 
 .text-column{
     padding: 40px 20px 10px 0px;
-    width: 50%;
     font-size: 120%;
-    grid-row: 1 / span 1;
+    grid-row: 1 / span 2;
 }
 
 a:hover {
