--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,15 +6,18 @@ body{
 h1, h2{
     text-align: center;
     padding: 20px 20px 20px 20px;
+    color: coral;
+    text-shadow: 1px 1px 2px rgba(128, 255, 255, 0.75);
 }
 
 .navigation-menu{
-    background-color: rgba(127, 255, 212, 0.5);
+    background-color: rgba(255, 255, 255, 0.75);
     padding: 10px 10px 10px 10px;
+    color: crimson
 }
 
 .grid-container{
-    background-color: rgba(127, 255, 212, 0.5);
+    background-color: rgba(245, 245, 245, 0.75);
     padding: 20px;
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -49,13 +52,13 @@ video{
 }
 
 a:hover {
-    color: red;
+    color: blueviolet;
     font-size: 120%;
 }
 
 
 /* nav-menu pages styling*/
-.container, .footer {
+.container, .footer, .navigation-menu{
     max-width: 800px;
     margin: 0 auto;
     padding: 20px;
@@ -68,6 +71,9 @@ ul{
     white-space: wrap;
     word-break: break-word;
 }
+ul, p{
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+}
 
 .back-to-top{
     text-align: right;
@@ -77,4 +83,3 @@ ul{
     font-size: 150%;
     transition-duration: 0.3s;
 }
-
