--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,7 +6,7 @@ body{
 h1, h2{
     text-align: center;
     padding: 20px 20px 20px 20px;
-    color: coral;
+    color: steelblue;
     text-shadow: 1px 1px 2px rgba(128, 255, 255, 0.75);
 }
 
@@ -35,7 +35,7 @@ h1, h2{
 
 .media-column{
     width: 40%;
-    padding: 20px ;
+    padding: 0 20px 20px 20px ;
 }
 
 video{
@@ -46,7 +46,7 @@ video{
 
 .text-column{
     width: 40%;
-    padding: 30px; /*40px 20px 10px 0px;*/
+    padding: 0 20px 20px 20px ;
     font-size: 120%;
     grid-row: 1 / span 2;
 }
@@ -56,6 +56,14 @@ a:hover {
     font-size: 120%;
 }
 
+.back-to-top{
+    text-align: right;
+    font-family: fantasy;
+}
+.back-to-top:hover{
+    font-size: 150%;
+    transition-duration: 0.3s;
+}
 
 /* nav-menu pages styling*/
 .container, .footer, .navigation-menu{
@@ -75,11 +83,3 @@ ul, p{
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
-.back-to-top{
-    text-align: right;
-    font-family: fantasy;
-}
-.back-to-top:hover{
-    font-size: 150%;
-    transition-duration: 0.3s;
-}
