--- a/styles/styles.css
+++ b/styles/styles.css
@@ -34,19 +34,19 @@ h1, h2{
 }
 
 .media-column{
-    width: 40%;
-    padding: 0 20px 20px 20px ;
+    width: 50%; /* to change width from '%' to 'vw' */
+    padding: 0 20px 20px 40px ;
 }
 
 video{
-    width: 600px;
+    width: 500px;
     height: 700px;
     object-fit: cover;
 }
 
 .text-column{
-    width: 40%;
-    padding: 0 20px 20px 20px ;
+    width: 50%; /* to change width from '%' to 'vw' */
+    padding: 0 20px 20px 100px ;
     font-size: 120%;
     grid-row: 1 / span 2;
 }
@@ -77,7 +77,7 @@ a:hover {
 
 ul{
     white-space: wrap;
-    word-break: break-word;
+    word-break:normal;
 }
 ul, p{
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
