--- a/styles/styles.css
+++ b/styles/styles.css
@@ -25,6 +25,10 @@ h1, h2{
     border-radius:10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
+code{
+    font-family: monospace;
+    box-shadow: 2px 2px 4px rgba(127, 128, 128, 0.4);
+}
 
 /* Media query for small screens */
 @media (max-width: 768px) {
@@ -39,7 +43,7 @@ h1, h2{
 }
 
 video{
-    width: 500px;
+    width: 550px;
     height: 700px;
     object-fit: cover;
 }
@@ -79,7 +83,7 @@ ul{
     white-space: wrap;
     word-break:normal;
 }
-ul, p{
+ul, p, pre{
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
