--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,58 +1,56 @@
+header{
+    background: radial-gradient(circle, #bbfeb3, #FFFFE0);
+    padding: 5px;
+    color: #333;
+    text-align: center;
+    border-radius: 5px;
+  }
 
 body{
-    background-color: bisque;
+    background: radial-gradient(farthest-side, #bbfeb3, #ADD8E6) /*bisque*/;
 }
 
 h1, h2{
     text-align: center;
-    padding: 20px 20px 20px 20px;
+    padding: 20px 20px 0px 20px;
     color: steelblue;
     text-shadow: 1px 1px 2px rgba(128, 255, 255, 0.75);
-}
-
-.navigation-menu{
-    background-color: rgba(255, 255, 255, 0.75);
-    padding: 10px 10px 10px 10px;
-    color: crimson
 }
 
 .grid-container{
     background-color: rgba(245, 245, 245, 0.75);
     padding: 20px;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 20px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
     border-radius:10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 code{
     font-family: monospace;
+    color: darkcyan;
     box-shadow: 2px 2px 4px rgba(127, 128, 128, 0.4);
 }
 
-/* Media query for small screens */
-@media (max-width: 768px) {
-    .grid-container{
-        grid-auto-flow: dense; 
-    }    
+.image{
+    min-height: 300px;
+    max-height: 500px;
+    min-width: 400px;
+    max-width: 550px;
 }
-
-.media-column{
-    width: 50%; /* to change width from '%' to 'vw' */
-    padding: 0 20px 20px 40px ;
-}
-
-video{
-    width: 550px;
-    height: 700px;
+video{ /* koala eating leaves video */
+    min-height: 300px;
+    max-height: 500px;
+    min-width: 300px;
+    max-width: 400px;
     object-fit: cover;
 }
-
-.text-column{
-    width: 50%; /* to change width from '%' to 'vw' */
-    padding: 0 20px 20px 100px ;
-    font-size: 120%;
-    grid-row: 1 / span 2;
+iframe, .image, video{
+    float: right;
+    border-radius: 20px;
+    overflow: hidden;
+    position: relative;
 }
 
 a:hover {
@@ -61,29 +59,50 @@ a:hover {
 }
 
 .back-to-top{
-    text-align: right;
+    color: yellow;
+    font-style: oblique;
     font-family: fantasy;
+    text-shadow: 2px 2px 4px rgba(128, 128, 128, 0.75);
+    padding: 10px 10px 10px 10px;
+    display: inline-block;
 }
 .back-to-top:hover{
     font-size: 150%;
-    transition-duration: 0.3s;
+    transition-duration: 0.2s;
 }
 
 /* nav-menu pages styling*/
-.container, .footer, .navigation-menu{
+.notes-container, .footer, .navigation-menu{
     max-width: 800px;
     margin: 0 auto;
     padding: 20px;
-    background-color: bisque;
+    background-color: FFFFE0;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   }
 
-ul{
-    white-space: wrap;
-    word-break:normal;
-}
 ul, p, pre{
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: medium;
 }
 
+.credits{
+    padding-right: 10px;
+}
+
+/* Media query for smaller screens */
+@media (max-width: 768px) {
+    .grid-container {
+        max-width: auto;
+        /*grid-template-columns: repeat(1, 1fr); /* Two columns */
+    }
+    ul, p, pre, .credits{
+        font-size: small;
+    }
+    h1, h2{
+        font-size: larger;
+    }
+    iframe{
+        width: 75%;
+    }
+  }
