--- a/styles/styles.css
+++ b/styles/styles.css
@@ -112,20 +112,19 @@ a
 
 /*Pricing blocks*/
 
-/*.pricing-container
+.pricing-container
 {
     width: 100%;
+    max-width: 1200px;
     margin: 0 auto;
     padding: 0 1.5rem;
-}*/
+}
 .pricing-container
 {
     padding-top: 10px;
-    margin: 10 0;
+    margin: 0 auto; /*aligns content to center*/
     
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
 }
 
 .pricing-block-outer
@@ -133,7 +132,6 @@ a
     display:flex;
     justify-content: center;
     flex-wrap:wrap;
-    padding: 10px;
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .pricing-block-inner
@@ -150,7 +148,6 @@ a
 {
     flex:1;
     align-items: center;
-    margin-right: 20px;
 }
 
 .pricing-block-inner .pricing-block-1
@@ -159,6 +156,9 @@ a
     border-color: transparent;
     text-align: center;
     margin-top: 70px;
+    padding-right: 20px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: #464951;
 }
 
 .pulse-basic-header
@@ -330,7 +330,7 @@ a
 {
     background-color: #fff;
     border: 0.1px solid #83858a;
-    width: 33.3333%;
+    width: 33.333%;
     display: flex;
 }
 .pricing-block-3
@@ -368,7 +368,6 @@ a
     padding: 1.25rem 2rem 1.5rem 2rem;
     font-size: 0.875rem;
     text-align: center;
-    line-height: 1.5;
     background-color: #f2f3f3;
     display:block;
     font-weight: 400;
@@ -380,7 +379,6 @@ a
     font-weight: 400;
     text-align: center;
     color: #464951;
-    line-height: 1.5;
 }
 .pricing-block-3 .pricing-plan-title-text
 {
